--- a/google/style.css
+++ b/google/style.css
@@ -56,3 +56,16 @@ body {
 .buttons input[type="submit"]:hover {
   border: 1px solid #c6c6c6;
 }
+
+/* Add styling for PixelSearch letters */
+.logo .p { color: #4285F4; }     /* P - Blue */
+.logo .i { color: #DB4437; }     /* i - Red */
+.logo .x { color: #F4B400; }     /* x - Yellow */
+.logo .e { color: #4285F4; }     /* e - Blue */
+.logo .l { color: #0F9D58; }     /* l - Green */
+.logo .s { color: #DB4437; }     /* S - Red */
+.logo .e2 { color: #F4B400; }    /* e - Yellow */
+.logo .a { color: #4285F4; }     /* a - Blue */
+.logo .r { color: #0F9D58; }     /* r - Green */
+.logo .c { color: #DB4437; }     /* c - Red */
+.logo .h { color: #F4B400; }     /* h - Yellow */
