--- a/tweet/style.css
+++ b/tweet/style.css
@@ -86,4 +86,9 @@ body {
   .tweet-box textarea {
     font-size: 14px;
   }
+   .logo {
+     width: 50px;
+     height: auto;
+     display: block;
+     margin: 0 auto 20px;
 }
