--- a/tweet/style.css
+++ b/tweet/style.css
@@ -86,9 +86,10 @@ body {
   .tweet-box textarea {
     font-size: 14px;
   }
-   .logo {
-     width: 25px;
-     height: auto;
-     display: block;
-     margin: 0 auto 20px;
+  .logo {
+    width: 25px;
+    height: auto;
+    display: block;
+    margin: 20px auto;
+    max-width: 100%;
 }
